# sentry_hook

./: Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yaml  slim.report.json  slim.sh  webhook.json
.github/workflows/: docker-image.yml
src/: config.rs  lib.rs  main.rs  startup.rs  webhook.rs
src/routes/: feishu.rs  helloworlld.rs  mod.rs
tests/serde/: main.rs  trans.rs
