[package]
name = "sentry_webhook"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sentry_webhook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["http1"]}
tokio = { version = "1.28.0", features = ["full"] }
config = { version = "0.13.3", features = ["yaml"] }
serde = { version = "1.0.160", features = ["derive"] }
hyper = { version = "0.14.26" }
